# aspire_quickbooks

./: dbt_project.yml  packages.yml  pyproject.toml
models/double_entry_transactions/: int_quickbooks__invoice_double_entry.sql
